--- a/src/styles/combat/Enemy/EnemyAttackBar.css
+++ b/src/styles/combat/Enemy/EnemyAttackBar.css
@@ -4,12 +4,12 @@
   /* justify-content: flex-start; */
   align-items: center;
   margin: 0 5%;
-  background-color: white;
+  background-color: #515151;
   width: 25%;
-  height: 5;
+  height: 5%;
 }
 .innerBar {
-  background-color: red;
+  background-color: rgb(231, 224, 24);
   width: 1;
   height: 100%;
 }
