--- a/src/styles/utils/Bar.css
+++ b/src/styles/utils/Bar.css
@@ -10,6 +10,6 @@
 }
 .barContainer > .innerBar {
   /* background-color: whitesmoke; */
-  /* width: 100%; */
-  /* height: 100%; */
+  width: 100%;
+  height: 100%;
 }
