--- a/src/styles/utils/Bar.css
+++ b/src/styles/utils/Bar.css
@@ -5,11 +5,10 @@
   margin: auto;
   background-color: "black";
   outline: #fff solid 2px;
-  height: 10%;
+  height: 50%;
   width: 90%;
 }
 .barContainer > .innerBar {
-  /* background-color: whitesmoke; */
   width: 100%;
-  height: 100%;
+  height: auto;
 }
