--- a/src/styles/utils/Bar.css
+++ b/src/styles/utils/Bar.css
@@ -4,7 +4,7 @@
   align-self: center;
   margin: auto;
   background-color: "black";
-  outline: #fff solid 2px;
+  outline: #b5b5b5 solid 2.5px;
   height: 50%;
   width: 90%;
 }
